style: renamed organization from org.example to cl.scian

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>org.example</groupId>
+    <groupId>cl.scian</groupId>
     <artifactId>ActiveContours</artifactId>
     <version>0.1.1-SNAPSHOT</version>
 
